src/test/deca/context/valid/wobj/test_opcmp_float_int.deca
// Description:
//    operation de comparaison reussi
//
// Resultats:
//    state = false
//
// Historique:
//    cree le 01/01/2024

{
   boolean state = (42.0 <= 24) ;
}
