src/test/deca/context/invalid/test_decl_var_void.deca
// Description:
//    Declaration
//
// Resultats:
//    Ligne 11: Vous ne pouvez pas declarer une variable de type Void
// 
// Historique:
//    cree le 01/01/2024

{
   void a ;
}
